# extract-anything

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  pyproject.toml
.github/workflows/: modal-cd.yml  prefect-cd.yml  slack-notify-failure.yml
baml_src/: clients.baml  execute_baml.baml  generators.baml  ndas.baml
frontend/: package-lock.json  package.json
frontend/baml_client/: async_client.ts  async_request.ts  inlinedbaml.ts  parser.ts  partial_types.ts  sync_client.ts  sync_request.ts  type_builder.ts  types.ts
frontend/baml_client/react/: hooks.tsx  server.ts  server_streaming.ts  server_streaming_types.ts
processed/milestones/: part-00001-23eb241a-54dd-4286-99a6-50c69bbeff37-c000.snappy.parquet
processed/ndas/: part-00001-a6e0d9a6-8db6-4675-9aa8-6a150752bf81-c000.snappy.parquet
processed/parties/: part-00001-7a6f0b49-6a47-4b6a-9045-bfa39a335cba-c000.snappy.parquet
processed/risks/: part-00001-f349cb87-6409-454b-a5b6-c31cf6e92cd9-c000.snappy.parquet
src/extractor/: __init__.py
src/flows/: hooks.py  prefect.yaml  process_nda.py
src/modals/gemma/: gemma_3_4b.py
src/modals/llama_modal/: llama_3_2_11b.py
src/shared/: __init__.py  db.py  gcs.py  pdf_processor.py  server.py  test.py
src/shared/baml_client/: __init__.py  async_client.py  async_request.py  config.py  globals.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
src/shared/sql/: PARTY_RISK_CORRELATION.SQL  RISK_ANALYSIS.sql  TIMELINE_ANALYSIS.sql
