[project]
name = "extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "ben.epstein97@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anypathlib>=0.2.0",
    "baml-py==0.81.3",
    "deltalake>=0.25.5",
    "duckdb>=1.2.1",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "modal==0.73.115",
    "pdf2image>=1.17.0",
    "polars>=1.26.0",
    "prefect>=3.3.3",
    "prefect-gcp>=0.6.5",
    "prefect-github>=0.3.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "coverage >=7.4.0, <8",
    "mypy >=1.10, <2",
    "pytest >=8.2, <9",
    "pytest-cov >=5.0.0, <6",
    "ruff >=0.4.5, <1.0",
    "jupyter",
    "notebook",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "src/extractor", "src/flows", "src/modals", "src/shared"]


[tool.mypy]
check_untyped_defs = true
exclude = ["baml_src/", "baml_client/", "shared/server.py"]


[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true
